@@ -22,6 +22,9 @@ git-annex (4.20130710) UNRELEASED; urgency=low
     if hinotify cannot process a directory (but can't detect changes in it)
   * directory special remote: Fix checking that there is enough disk space
     to hold an object, was broken when using encryption.
+  * webapp: Differentiate between creating a new S3/Glacier/WebDav remote,
+    and initializing an existing remote. When creating a new remote, avoid
+    conflicts with other existing (or deleted) remotes with the same name.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 09 Jul 2013 19:17:13 -0400
 
